# rocq-of-ocaml

./: .gitignore  CHANGELOG.md  Makefile  README.md  coq-of-ocaml.opam  dune-project  rocq-of-ocaml.opam  test.rb
.github/workflows/: ci.yml
doc/docs/: attributes.md  configuration.md  cookbook.md  examples.md  faq.md  gadts.md  install.md  introduction.md  module-system.md  ocaml-core.md  roadmap.md  run.md  type-definitions.md
doc/website/: siteConfig.js
doc/website/core/: Footer.js
doc/website/pages/en/: index.js
doc/website/static/css/: custom.css
doc/website/static/js/: language-name.js
proofs/: Basics.v  Libraries.v  List.v  Settings.v  Tags.v  _CoqProject  configure.sh
src/: ast.ml  attribute.ml  configurationRenaming.ml  constant.ml  dune  exp.ml  isFirstClassModule.ml  mixedPath.ml  moduleTyp.ml  name.ml  pathName.ml  pattern.ml  rocqOfOCaml.ml  signatureShape.ml  structure.ml  type.ml  typeDefinition.ml
tests/: _CoqProject  anonymous_sub_signatures.v  axiom.ml  axiom.v  builtin_types.v  cast.ml  cast.v  cfml_set.v  configuration.json  configuration.v  extensible_types.v  first_class_modules.v  free_type_variables.v  function_with_explicit_types.v  function_with_named_parameters.v  functor.v  functor_application.v  gadts.ml  gadts.v  gadts2.ml  gadts2.v  gadts_existential.ml  gadts_existential.v  gadts_record.ml  gadts_record.v  gadts_record2.ml  gadts_record2.v  impredicative_set.v  interface.v  let_rec_and.v  lets.ml  lets.v  local_open.v  local_vs_global_name.v  matching.v  module_existentials.v  modules.v  monadic_notation.v  mutual_types.v  open_modules.v  (+22 more)
tests/errors/: lazy_pattern.errors  lazy_pattern.ml  legacy_attribute.errors  legacy_attribute.ml  optional_default.errors  optional_default.ml  polymorphic_variants.errors  polymorphic_variants.ml  unknown_attribute_json.errors  unknown_attribute_json.ml  unsupported_expressions.errors  unsupported_expressions.ml  unsupported_signature.errors  unsupported_signature.mli
