version: "dev"

opam-version: "2.0"
maintainer: "contact@formal.land"
homepage: "https://formal.land/docs/tools/rocq-of-ocaml/introduction"
dev-repo: "git+https://github.com/formal-land/rocq-of-ocaml.git"
bug-reports: "https://github.com/formal-land/rocq-of-ocaml/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [
  ["sh" "-c" "cd proofs && ./configure.sh"] {rocq-core:installed}
  [make "-C" "proofs" "-j%{jobs}%"] {rocq-core:installed}
  ["dune" "build" "-p" name "-j" jobs]
  [make "test"] {with-test}
]
install: [
  [make "-C" "proofs" "install"] {rocq-core:installed}
]
depends: [
  "angstrom"
  "bisect_ppx" {with-test}
  "cmdliner" {with-test & < "2.0"}
  "conf-ruby" {with-test}
  "csexp"
  "dune" {>= "3.8"}
  "merlin-lib"
  "ocaml" {>= "5.4" & < "5.7"}
  "ocamlfind" {>= "1.5.2"}
  "result"
  "rocq-core" {>= "9.0" & < "9.1"}
  "rocq-prover" {>= "9.0" & < "9.1"}
  "rocq-stdlib" {>= "9.0" & < "9.1"}
  "smart-print"
  "yojson" {>= "1.6.0"}
]
tags: [
  "keyword:compilation"
  "keyword:OCaml"
  "logpath:RocqOfOCaml"
]
synopsis: "Compile a subset of OCaml to Rocq"
